[gd_scene load_steps=59 format=3 uid="uid://b6idp1aittwg"]

[ext_resource type="Script" path="res://scripts/paint_camera.gd" id="1_f3075"]
[ext_resource type="PackedScene" uid="uid://5q6xyekrnr3d" path="res://scenes/kart.tscn" id="2_4r1ug"]
[ext_resource type="PackedScene" uid="uid://hsge0fqynndm" path="res://scenes/canva.tscn" id="3_osf88"]
[ext_resource type="Script" path="res://scripts/cursor_manager.gd" id="3_qabto"]
[ext_resource type="Texture2D" uid="uid://c7yrn5dac0q8c" path="res://assets/sprites/cursor/cursor.png" id="4_f6ifv"]
[ext_resource type="Texture2D" uid="uid://cxmhxws27b0tu" path="res://assets/sprites/cursor/paint.png" id="6_s3s6i"]
[ext_resource type="PackedScene" uid="uid://d0fdctfj4c7e6" path="res://scenes/color_select.tscn" id="7_gy87y"]
[ext_resource type="Texture2D" uid="uid://c4maxrtwlrcyf" path="res://assets/sprites/cursor/grab.png" id="7_qwu64"]
[ext_resource type="Texture2D" uid="uid://0fm5a3au45fk" path="res://assets/sprites/cursor/drag.png" id="8_uftn5"]
[ext_resource type="Texture2D" uid="uid://cf3glhk42mskr" path="res://assets/sprites/icons/wall.png" id="9_2usq4"]
[ext_resource type="Texture2D" uid="uid://dfsqaticpwi8t" path="res://assets/sprites/icons/wheel.png" id="9_sof8g"]
[ext_resource type="Texture2D" uid="uid://bkskkbr1ygdqq" path="res://assets/sprites/icons/mud.png" id="10_2oa1c"]
[ext_resource type="PackedScene" uid="uid://becsavtygatmv" path="res://scenes/track_item.tscn" id="12_vgk8r"]
[ext_resource type="Script" path="res://scripts/toolkit.gd" id="13_7ymmt"]
[ext_resource type="FontFile" uid="uid://bqjda8m410iv5" path="res://assets/fonts/uni05_53.ttf" id="14_crts4"]
[ext_resource type="Script" path="res://scripts/debug.gd" id="14_nfme0"]
[ext_resource type="Texture2D" uid="uid://bshs1s7305byf" path="res://assets/sprites/ui/button.png" id="16_lna8n"]
[ext_resource type="Script" path="res://scripts/items_placement.gd" id="16_vo2po"]
[ext_resource type="Texture2D" uid="uid://c07vsjt48qn40" path="res://assets/sprites/icons/ice.png" id="17_ba1ti"]
[ext_resource type="Script" path="res://scripts/switch_button.gd" id="17_drn1v"]
[ext_resource type="FontFile" uid="uid://ckop7mbojcgkk" path="res://assets/fonts/PIXELADE.TTF" id="17_kbh25"]
[ext_resource type="Texture2D" uid="uid://7727f07mvvj5" path="res://assets/sprites/icons/flag.png" id="18_kw523"]
[ext_resource type="Script" path="res://scripts/racing_ui.gd" id="22_x074b"]
[ext_resource type="Texture2D" uid="uid://mxt230mh2bag" path="res://assets/sprites/ui/prompt-box.png" id="24_lyn0d"]
[ext_resource type="Script" path="res://scripts/racing_button.gd" id="25_85kf8"]
[ext_resource type="Script" path="res://scripts/prompt.gd" id="25_rbiyc"]
[ext_resource type="Script" path="res://scripts/item_validation.gd" id="26_i76g3"]
[ext_resource type="Texture2D" uid="uid://bo455ptlrmhua" path="res://assets/sprites/mini-flag.png" id="27_domar"]
[ext_resource type="FontFile" uid="uid://bdurl2l3gviel" path="res://assets/fonts/Born2bSportyV2.ttf" id="28_4v086"]
[ext_resource type="Script" path="res://scripts/chrono.gd" id="30_4lnnx"]
[ext_resource type="Texture2D" uid="uid://c4lqrhghx8jlq" path="res://assets/sprites/ui/chrono-box.png" id="30_ro0ov"]
[ext_resource type="Script" path="res://scripts/chrono_display.gd" id="31_s3r12"]
[ext_resource type="PackedScene" uid="uid://6eomamaydfsf" path="res://scenes/title_screen.tscn" id="32_i6gei"]
[ext_resource type="FontFile" uid="uid://0ed43i1xjnl0" path="res://assets/fonts/VAX810MONO.ttf" id="32_j30o2"]
[ext_resource type="Script" path="res://scripts/levels_selection.gd" id="35_bl3x2"]
[ext_resource type="Script" path="res://scripts/level.gd" id="36_evuqn"]
[ext_resource type="Resource" uid="uid://cvn7sb3r4kkjg" path="res://levels/level_1.tres" id="37_e4ogq"]
[ext_resource type="Texture2D" uid="uid://ciu51j4l16f3b" path="res://assets/sprites/icons/paint.png" id="39_8pa43"]
[ext_resource type="Script" path="res://scripts/results.gd" id="39_gjx6r"]
[ext_resource type="Texture2D" uid="uid://bhwvwgfdehl3q" path="res://assets/sprites/icons/chrono.png" id="39_halls"]
[ext_resource type="Texture2D" uid="uid://doamwweysdec2" path="res://assets/sprites/ui/dialog-box.png" id="40_52q4w"]
[ext_resource type="Resource" uid="uid://b11dqulq4qtxc" path="res://levels/level_2.tres" id="40_76np2"]
[ext_resource type="Texture2D" uid="uid://de2ssopx4ib6p" path="res://assets/sprites/icons/screen.png" id="41_ggb73"]
[ext_resource type="AudioStream" uid="uid://dt4dbglhs4jy6" path="res://assets/sfx/brush.ogg" id="43_j64u1"]
[ext_resource type="Script" path="res://scripts/painting_sounds.gd" id="44_idtvv"]
[ext_resource type="AudioStream" uid="uid://bhuw12mxsyjb3" path="res://assets/sfx/select-color.wav" id="45_rsy6l"]
[ext_resource type="AudioStream" uid="uid://ch4xpxmuowrex" path="res://assets/sfx/grab.wav" id="46_xginj"]
[ext_resource type="AudioStream" uid="uid://db7aoct3vrgnl" path="res://assets/sfx/drop.wav" id="47_o2l5o"]
[ext_resource type="Script" path="res://scripts/racing_sounds.gd" id="48_ddcwe"]
[ext_resource type="AudioStream" uid="uid://cxif4vgu67sdt" path="res://assets/sfx/checkpoint.wav" id="49_p0x5b"]
[ext_resource type="AudioStream" uid="uid://13i3to1vmti8" path="res://assets/sfx/victory.wav" id="50_b3hrv"]
[ext_resource type="Script" path="res://scripts/switch_scene_sfx.gd" id="51_gbof7"]
[ext_resource type="AudioStream" uid="uid://vt6e7vf67m34" path="res://assets/sfx/switch_scene.wav" id="52_45ch7"]
[ext_resource type="AudioStream" uid="uid://ql5mghs7ch6g" path="res://assets/sfx/back.wav" id="53_4aslk"]
[ext_resource type="AudioStream" uid="uid://cj74iyjjkgxw7" path="res://assets/music/cpp_paint.ogg" id="54_mvb0q"]
[ext_resource type="AudioStream" uid="uid://bdt0cbwyhjbwv" path="res://assets/music/cpp_race.ogg" id="55_wpued"]
[ext_resource type="Script" path="res://scripts/music.gd" id="56_g8cqi"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_idfxx"]
clip_count = 2
clip_0/name = &"paint"
clip_0/stream = ExtResource("54_mvb0q")
clip_0/auto_advance = 0
clip_1/name = &"race"
clip_1/stream = ExtResource("55_wpued")
clip_1/auto_advance = 0
_transitions = {
Vector2i(0, 0): {
"fade_beats": 1,
"fade_mode": 0,
"from_time": 0,
"to_time": 0
},
Vector2i(0, 1): {
"fade_beats": 0,
"fade_mode": 0,
"from_time": 1,
"to_time": 1
},
Vector2i(1, 0): {
"fade_beats": 0,
"fade_mode": 0,
"from_time": 1,
"to_time": 0
}
}

[node name="Main" type="Node2D"]

[node name="PaintCamera" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("1_f3075")

[node name="Kart" parent="." instance=ExtResource("2_4r1ug")]
position = Vector2(200, 112)
max_velocity = 45.0
max_backward_celocity = 15.0
accel = 30.0
steer_force = 2.0
deceleration = 30.0
wet_max_velocity = 10.0

[node name="Canva" parent="." instance=ExtResource("3_osf88")]

[node name="Prompt" type="NinePatchRect" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 110.0
offset_top = 201.0
offset_right = 290.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("24_lyn0d")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource("25_rbiyc")

[node name="Label" type="Label" parent="Prompt"]
modulate = Color(1, 1, 1, 0.788235)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.756863)
theme_override_constants/shadow_offset_x = 0
theme_override_fonts/font = ExtResource("28_4v086")
theme_override_font_sizes/font_size = 16
text = "Draw: Your favorite game"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Toolkit" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 224.0
mouse_filter = 2
script = ExtResource("13_7ymmt")
metadata/_edit_lock_ = true

[node name="ColorPicker" type="VBoxContainer" parent="Toolkit"]
layout_mode = 0
offset_left = 7.0
offset_top = 21.0
offset_right = 84.3
offset_bottom = 197.57
theme_override_constants/separation = 7

[node name="Road" parent="Toolkit/ColorPicker" instance=ExtResource("7_gy87y")]
layout_mode = 2
color = Color(0.447059, 0.447059, 0.447059, 1)
icon = ExtResource("9_sof8g")
text = "Road"

[node name="Wall1" parent="Toolkit/ColorPicker" instance=ExtResource("7_gy87y")]
layout_mode = 2
color = Color(0.917647, 0.0745098, 0.439216, 1)
icon = ExtResource("9_2usq4")
text = "Wall"
tile = Vector2i(1, 0)

[node name="Wall2" parent="Toolkit/ColorPicker" instance=ExtResource("7_gy87y")]
layout_mode = 2
color = Color(0.156863, 0.772549, 0.74902, 1)
icon = ExtResource("9_2usq4")
tile = Vector2i(2, 0)

[node name="Water" parent="Toolkit/ColorPicker" instance=ExtResource("7_gy87y")]
layout_mode = 2
color = Color(0.364706, 0.294118, 0.87451, 1)
icon = ExtResource("10_2oa1c")
text = "Wet"
tile = Vector2i(0, 1)

[node name="Void" parent="Toolkit/ColorPicker" instance=ExtResource("7_gy87y")]
layout_mode = 2
color = Color(0.847059, 0.827451, 0.964706, 1)
icon = ExtResource("17_ba1ti")
text = "Ice"
tile = Vector2i(1, 1)

[node name="Debug" type="Control" parent="Toolkit"]
visible = false
anchors_preset = 0
offset_left = 313.0
offset_top = 107.0
offset_right = 387.435
offset_bottom = 193.88
script = ExtResource("14_nfme0")

[node name="Console" type="Label" parent="Toolkit/Debug"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("14_crts4")
theme_override_font_sizes/font_size = 8
text = "debug"

[node name="RaceButton" type="NinePatchRect" parent="Toolkit"]
self_modulate = Color(0.780392, 0.396078, 0.282353, 1)
texture_filter = 1
layout_mode = 0
offset_left = 314.0
offset_top = 175.0
offset_right = 392.55
offset_bottom = 203.88
mouse_filter = 1
texture = ExtResource("16_lna8n")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource("25_85kf8")
disable_color = Color(0.418536, 0.418536, 0.418536, 0.298039)

[node name="Label" type="Label" parent="Toolkit/RaceButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 0.713726)
theme_override_fonts/font = ExtResource("17_kbh25")
theme_override_font_sizes/font_size = 26
text = "Race"

[node name="TextureRect" type="TextureRect" parent="Toolkit/RaceButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.35
anchor_bottom = 1.0
offset_bottom = 1.0
texture = ExtResource("18_kw523")
stretch_mode = 3

[node name="Instructions" type="Label" parent="Toolkit/RaceButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0182
offset_top = 1.12
offset_right = 48.725
offset_bottom = 16.12
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 0.501961)
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("14_crts4")
theme_override_font_sizes/font_size = 8
text = "Get to all checkpoints and reach the goal"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ItemsInstructions" type="Label" parent="Toolkit"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 7.0
offset_right = -5.0
offset_bottom = 49.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 0.501961)
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("17_kbh25")
theme_override_font_sizes/font_size = 13
text = "Place these on the track:"
autowrap_mode = 3

[node name="Items" type="Node2D" parent="."]
script = ExtResource("16_vo2po")
cell_size = Vector2(32, 16)
item_prefab = ExtResource("12_vgk8r")

[node name="Start" parent="Items" instance=ExtResource("12_vgk8r")]
type = 0

[node name="Goal" parent="Items" instance=ExtResource("12_vgk8r")]
type = 2

[node name="SelectionTarget" type="Node2D" parent="Items"]
position = Vector2(327, 43)

[node name="ItemValidation" type="Node2D" parent="Items"]
script = ExtResource("26_i76g3")
min_distance = 10

[node name="StaticUI" type="CanvasLayer" parent="."]

[node name="RacingUI" type="Control" parent="StaticUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("22_x074b")
checkpoint_complete_color = Color(0.40477, 0.90732, 0.376089, 1)
metadata/_edit_lock_ = true

[node name="Controls" type="Label" parent="StaticUI/RacingUI"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 4.0
theme_override_fonts/font = ExtResource("17_kbh25")
theme_override_font_sizes/font_size = 13
text = "Esc: back to Edit"

[node name="Checkpoints" type="Control" parent="StaticUI/RacingUI"]
texture_filter = 1
layout_mode = 1
anchor_left = 0.9
anchor_right = 1.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 20.0
grow_horizontal = 0

[node name="Flag" type="TextureRect" parent="StaticUI/RacingUI/Checkpoints"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.249
anchor_bottom = 1.0
texture = ExtResource("27_domar")
stretch_mode = 5

[node name="Label" type="Label" parent="StaticUI/RacingUI/Checkpoints"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("17_kbh25")
theme_override_font_sizes/font_size = 13
text = "0/6"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Hero" type="Label" parent="StaticUI/RacingUI"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.893742, 0.84816, 0.0648201, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("28_4v086")
theme_override_font_sizes/font_size = 32
text = "FINISHED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChronoDisplay" type="NinePatchRect" parent="StaticUI/RacingUI"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.866071
anchor_right = 0.6
anchor_bottom = 0.991071
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("30_ro0ov")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource("31_s3r12")
finish_color = Color(0.796078, 0.878431, 0.168627, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="StaticUI/RacingUI/ChronoDisplay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 5.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("32_j30o2")
theme_override_font_sizes/font_size = 16
text = "00:00.000"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TitleScreen" parent="StaticUI" instance=ExtResource("32_i6gei")]

[node name="CursorManager" type="Sprite2D" parent="StaticUI"]
z_index = 3
texture_filter = 1
texture = ExtResource("4_f6ifv")
offset = Vector2(6, 6)
script = ExtResource("3_qabto")
default = ExtResource("4_f6ifv")
brush = ExtResource("6_s3s6i")
grab_hover = ExtResource("7_qwu64")
grabbing = ExtResource("8_uftn5")

[node name="Chrono" type="Node2D" parent="."]
script = ExtResource("30_4lnnx")

[node name="LevelsSelection" type="Node2D" parent="."]
script = ExtResource("35_bl3x2")
levels = Array[ExtResource("36_evuqn")]([ExtResource("37_e4ogq"), ExtResource("40_76np2")])

[node name="Results" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 400.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("39_gjx6r")
metadata/_edit_lock_ = true

[node name="Time" type="Label" parent="Results"]
layout_mode = 0
offset_top = 23.0
offset_right = 100.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.0383711, 0.0383711, 0.0383711, 0.768627)
theme_override_fonts/font = ExtResource("32_j30o2")
theme_override_font_sizes/font_size = 16
text = "00:00.000"
horizontal_alignment = 1

[node name="RestartBtn" type="NinePatchRect" parent="Results"]
self_modulate = Color(0.780392, 0.396078, 0.282353, 1)
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 51.0
offset_right = 86.55
offset_bottom = 79.88
mouse_filter = 1
texture = ExtResource("16_lna8n")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource("17_drn1v")
to_mode = 0

[node name="Label" type="Label" parent="Results/RestartBtn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.419998
offset_right = -0.419998
theme_override_colors/font_color = Color(0, 0, 0, 0.713726)
theme_override_fonts/font = ExtResource("17_kbh25")
theme_override_font_sizes/font_size = 13
text = "Try again"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Results/RestartBtn"]
modulate = Color(1, 1, 1, 0.776471)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.35
anchor_bottom = 1.0
offset_bottom = 1.0
texture = ExtResource("39_halls")
stretch_mode = 3

[node name="Screenshot" type="NinePatchRect" parent="Results"]
layout_mode = 0
offset_left = 315.0
offset_top = 11.0
offset_right = 388.0
offset_bottom = 68.0
texture = ExtResource("40_52q4w")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Label" type="Label" parent="Results/Screenshot"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.484
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 0.0239983
grow_horizontal = 2
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("17_kbh25")
theme_override_font_sizes/font_size = 13
text = "Share a screenshot!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="icon" type="TextureRect" parent="Results/Screenshot"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5625
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("41_ggb73")
stretch_mode = 3

[node name="NextLevelBtn" type="NinePatchRect" parent="Results"]
self_modulate = Color(0.780392, 0.396078, 0.282353, 1)
texture_filter = 1
layout_mode = 0
offset_left = 314.0
offset_top = 175.0
offset_right = 392.55
offset_bottom = 203.88
mouse_filter = 1
texture = ExtResource("16_lna8n")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource("17_drn1v")
to_mode = 0
next_level = true

[node name="Label" type="Label" parent="Results/NextLevelBtn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.419998
offset_right = -0.419998
theme_override_colors/font_color = Color(0, 0, 0, 0.713726)
theme_override_fonts/font = ExtResource("17_kbh25")
theme_override_font_sizes/font_size = 13
text = "Next level"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Results/NextLevelBtn"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.35
anchor_bottom = 1.0
offset_bottom = 1.0
texture = ExtResource("39_8pa43")
stretch_mode = 3

[node name="PaintingSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("43_j64u1")
bus = &"PaintSFX"
script = ExtResource("44_idtvv")

[node name="PickColor" type="AudioStreamPlayer" parent="PaintingSounds"]
stream = ExtResource("45_rsy6l")
volume_db = 8.0
bus = &"PaintSFX"

[node name="Grab" type="AudioStreamPlayer" parent="PaintingSounds"]
stream = ExtResource("46_xginj")
volume_db = 15.0
bus = &"PaintSFX"

[node name="Drop" type="AudioStreamPlayer" parent="PaintingSounds"]
stream = ExtResource("47_o2l5o")
volume_db = 20.0
bus = &"PaintSFX"

[node name="RacingSounds" type="Node2D" parent="."]
script = ExtResource("48_ddcwe")

[node name="Checkpoint" type="AudioStreamPlayer" parent="RacingSounds"]
stream = ExtResource("49_p0x5b")
volume_db = -5.0
bus = &"RaceSFX"

[node name="Finish" type="AudioStreamPlayer" parent="RacingSounds"]
stream = ExtResource("50_b3hrv")
volume_db = -3.0
bus = &"RaceSFX"

[node name="SwitchSceneSFX" type="Node2D" parent="."]
script = ExtResource("51_gbof7")

[node name="Next" type="AudioStreamPlayer" parent="SwitchSceneSFX"]
stream = ExtResource("52_45ch7")
bus = &"PaintSFX"

[node name="Back" type="AudioStreamPlayer" parent="SwitchSceneSFX"]
stream = ExtResource("53_4aslk")
bus = &"PaintSFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_idfxx")
script = ExtResource("56_g8cqi")

[connection signal="mouse_entered" from="Canva" to="StaticUI/CursorManager" method="enter_canva"]
[connection signal="mouse_exited" from="Canva" to="StaticUI/CursorManager" method="exit_canva"]
[connection signal="gui_input" from="Toolkit/RaceButton" to="Toolkit/RaceButton" method="on_input"]
[connection signal="gui_input" from="Results/RestartBtn" to="Results/RestartBtn" method="on_input"]
[connection signal="gui_input" from="Results/NextLevelBtn" to="Results/NextLevelBtn" method="on_input"]
